--- a/Typescript/Section_8/index.html
+++ b/Typescript/Section_8/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
   <div id="app"></div>
+  <form action="">
+    <input type="text" placeholder="Cource title" id="title" />
+    <input type="text" placeholder="Cource title" id="price" />
+    <button>Save</button>
+  </form>
 </body>
 </html>
